# autoflow

./: .gitignore  BUG_FIX_WORKFLOW.md  CHANGELOG.md  CLAUDE_INTEGRATION_STRATEGY.md  CONFIGURATION.md  Cargo.toml  DEMO.md  ENVIRONMENT_SETUP.md  FEATURE_WORKFLOW.md  GETTING_STARTED.md  LICENSE  MCP_SERVERS.md  PROGRESS.md  README.md  REBUILD_PLAN.md  RELEASE_STRATEGY.md  SETUP_REQUIRED.md  STATUS.md  TODO.md  UPDATE_STRATEGY.md
.claude/skills/: vitest-async-testing.md
.github/workflows/: release.yml
agents/: blocker-resolver.md  code-implementer.md  debug-blocker.md  e2e-fixer.md  e2e-test-runner.md  e2e-writer.md  environment-setup.md  health-check.md  infra-implementer.md  integration-fixer.md  integration-test-runner.md  make-docs-api.agent.md  make-docs-backend.md  make-docs-foundation.agent.md  make-docs-foundation.md  make-docs-frontend.md  make-docs-ops.md  make-docs-quality.md  make-docs-ui.agent.md  make-docs.md  make-sprints.md  review-fixer.md  reviewer.md  test-writer.md  unit-fixer.md  unit-test-runner.md
crates/autoflow-agents/: Cargo.toml
crates/autoflow-agents/src/: executor.rs  lib.rs  live_logger.rs
crates/autoflow-cli/: Cargo.toml
crates/autoflow-cli/src/: embedded.rs  main.rs  sync.rs  update.rs
crates/autoflow-cli/src/commands/: add.rs  agents.rs  analyze.rs  create.rs  env.rs  fix.rs  init.rs  install.rs  logs.rs  mcp.rs  mod.rs  pivot.rs  rollback.rs  skills.rs  sprints.rs  start.rs  status.rs  update.rs  validate.rs  worktree.rs
crates/autoflow-cli/templates/: CLAUDE.template.md
crates/autoflow-cli/templates/.claude/: settings.json.template
crates/autoflow-core/: Cargo.toml
crates/autoflow-core/src/: analyzer.rs  git.rs  lib.rs  orchestrator.rs  workflow.rs
crates/autoflow-data/: Cargo.toml
crates/autoflow-data/src/: config.rs  error.rs  lib.rs  sprints.rs  tasks.rs
crates/autoflow-git/: Cargo.toml
crates/autoflow-git/src/: lib.rs  worktree.rs
crates/autoflow-quality/: Cargo.toml
crates/autoflow-quality/src/: gates.rs  lib.rs  pipeline.rs  schema_validator.rs
crates/autoflow-utils/: Cargo.toml
crates/autoflow-utils/src/: binary_update.rs  context.rs  debug_logger.rs  lib.rs  logging.rs  paths.rs  strings.rs  update.rs  yaml.rs
docs/: ARCHITECTURE.md  AUTO_UPDATE_COMPLETE.md  AUTO_UPDATE_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  TROUBLESHOOTING.md  USER_GUIDE.md
schemas/: sprints.schema.json
scripts/: install.sh  package.sh  sync-agents.sh  uninstall.sh  update-binary.sh  update.sh
skills/: react-vite-integration.md
skills/backward-compatibility/: SKILL.md
skills/docker-optimization/: SKILL.md
skills/jest-to-vitest/: SKILL.md
skills/keycloak-setup/: SKILL.md
skills/laravel-cache-configuration/: SKILL.md
skills/laravel-session-management/: SKILL.md
skills/laravel-test-environment/: SKILL.md
skills/nextjs-app-router/: SKILL.md
skills/owasp-security-audit/: SKILL.md
skills/react-performance/: SKILL.md
skills/test-data-builder/: SKILL.md
templates/: SPRINTS.template.yml
