[workspace]
resolver = "2"
members = [
    "crates/autoflow-cli",
    "crates/autoflow-core",
    "crates/autoflow-agents",
    "crates/autoflow-quality",
    "crates/autoflow-data",
    "crates/autoflow-git",
    "crates/autoflow-utils",
]

[workspace.package]
version = "0.1.11"
edition = "2021"
authors = ["AutoFlow Contributors"]
license = "MIT"
description = "Best-in-class autonomous coding agent"
repository = "https://github.com/ddunford/autoflow"
homepage = "https://github.com/ddunford/autoflow"
documentation = "https://github.com/ddunford/autoflow"
keywords = ["ai", "coding", "agent", "automation", "autonomous"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CLI
clap = { version = "4.4", features = ["derive", "color", "suggestions"] }
colored = "2.1"
indicatif = "0.17"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Validation
jsonschema = "0.18"
validator = { version = "0.18", features = ["derive"] }

# Git
git2 = "0.19"

# File operations
walkdir = "2.4"
glob = "0.3"
dirs = "5.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
toml = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Version comparison
semver = "1.0"

# Archive extraction
tar = "0.4"
flate2 = "1.0"

# Testing
[workspace.dev-dependencies]
proptest = "1.4"
tempfile = "3.8"
tokio-test = "0.4"
