[package]
name = "autoflow-agents"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
autoflow-data = { path = "../autoflow-data" }
tokio = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
