[package]
name = "autoflow-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "autoflow"
path = "src/main.rs"

[dependencies]
autoflow-data = { version = "0.1.4", path = "../autoflow-data" }
autoflow-core = { version = "0.1.4", path = "../autoflow-core" }
autoflow-quality = { version = "0.1.4", path = "../autoflow-quality" }
autoflow-git = { version = "0.1.4", path = "../autoflow-git" }
autoflow-utils = { version = "0.1.4", path = "../autoflow-utils" }

clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
colored = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
autoflow-agents = { version = "0.1.4", path = "../autoflow-agents" }
walkdir = { workspace = true }
