[package]
name = "autoflow-git"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
autoflow-data = { path = "../autoflow-data" }
tokio = { workspace = true }
tracing = { workspace = true }
git2 = { workspace = true }
chrono = { workspace = true }
