[package]
name = "autoflow-quality"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
autoflow-data = { path = "../autoflow-data" }
tokio = { workspace = true }
tracing = { workspace = true }
jsonschema = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
dirs = "5.0"
