[package]
name = "autoflow-quality"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

# Include schema files in published crate
include = ["src/**/*", "schemas/**/*"]

[dependencies]
autoflow-data = { version = "0.1.10", path = "../autoflow-data" }
tokio = { workspace = true }
tracing = { workspace = true }
jsonschema = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
dirs = "5.0"
