[package]
name = "autoflow-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
autoflow-data = { path = "../autoflow-data" }
serde_yaml = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
dirs = { workspace = true }
