[package]
name = "autoflow-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
autoflow-data = { version = "0.1.10", path = "../autoflow-data" }
serde_yaml = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
